<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2023. Happy coding ! :)
  ~ Author: Serhii Butryk
  -->
<resources>
    <string name="app_name">Notes</string>
    <string name="app_name_debug">NotesDev</string>

    // NotesView activity
    <string name="ms_no_notes">No notes yet</string>
    <string name="ms_no_search_results">Nothing found. Sorry.</string>

    // Alert Dialog
    <string name="ms_no_user_account">This user account is not authorized. Please, authorize your user.</string>
    <string name="title_no_user_account">Authorize error</string>

    <string name="ms_wrong_password">Password is wrong. Please, try again.</string>
    <string name="title_wrong_password">Authorize error</string>

    <string name="ms_empty_field">Empty password or user name. \nPlease enter valid credentials.</string>
    <string name="title_empty_field">Authorize error</string>

    <string name="ms_user_exists" translatable="false">User name has already been existed. \nPlease chose different name.</string>

    <string name="ms_password_differs">Passwords do not match. \nPlease enter password again.</string>

    <string name="ms_space_contain">Spaces are not allowed. \nPlease enter your credentials again.</string>

    <string name="ms_unlock_key_invalid">Entered key is incorrect. \nPlease try again.</string>
    <string name="title_unlock_key_invalid">Authorize error</string>

    <string name="ms_extract_data">No data available.</string>
    <string name="title_extract_data">Error</string>

    <string name="title_error">Error</string>
    <string name="ms_password_is_short">Password is short or empty. Please, enter password longer than 5 characters.</string>
    <string name="ms_email_is_not_valid">Your entered invalid email. Please, try again.</string>

    // Login Activity
    <string name="text_description">Welcome to note app. Manage all your notes here. Firstly you need to create a user. Click \"Continue\" button to proceed.</string>
    <string name="btn_continue">Continue</string>
    <string name="login_btn">Login</string>
    <string name="create_account_bnt">Done</string>
    <string name="usr_psw">Password</string>
    <string name="usr_email">Email</string>
    <string name="usr_new_psw">Password</string>
    <string name="usr_approve_new_psw">Confirm password</string>
    <string name="usr_new_email">Email</string>
    <string name="title_login">Welcome</string>
    <string name="title_reg">Registration</string>
    <string name="login_with_biometric">Login with biometric</string>

    // Default values
    <string name="empty_note_text">Empty</string>
    <string name="template_note_title">Add your title</string>
    <string name="template_short_note">Add your note</string>
    <string name="empty_string"> </string>

    // NoteEditor
    <string name="title_note">Note title</string>
    <string name="body_note">Your note</string>
    <string name="time_date_label">Updated: %s</string>
    <string name="title_toolbar">Editor</string>

    <string name="toast_action_message">Note is saved</string>
    <string name="toast_action_deleted_message">Note is deleted</string>
    <string name="toast_action_deleted_message_no_note">No note to delete</string>
    <string name="toast_action_delete_error_note">Can\'t delete an empty note</string>
    <string name="toast_action_delete_error_first_note">Can\'t delete a note.</string>
    <string name="toast_action_error_note_is_not_changed">Nothing to save</string>
    <string name="toast_action_error_note_is_empty">Empty note can\'t be saved</string>
    <string name="toast_action_error_note_nothing_to_clear">Nothing to clear</string>

    <string name="edit_hint_note_item">Add new list item</string>
    <string name="edit_hint_note_content">Note</string>

    // Menu
    <string name="delete_note_item">Delete note</string>
    <string name="save_note_item">Save note</string>
    <string name="clear_note_item">Clear note</string>
    <string name="settings_item">Settings</string>
    <string name="action_convert_to_list">Change mode</string>
    <string name="action_layout_grid" translatable="false">Convert to grid</string>
    <string name="action_layout_list" translatable="false">Convert to list</string>

    // PreferenceActivity
    <string name="preference_title">Settings</string>

    <string name="preference_change_password_key" translatable="false">change_password</string>
    <string name="preference_change_password_title">Change password</string>
    <string name="preference_change_password_desc">Change your login password.</string>

    <string name="preference_category_title">Security</string>
    <string name="preference_category_title_about">About</string>
    <string name="preference_category_title_backup">Backup and restore</string>

    <string name="preference_category_title_debug">Diagnostics</string>
    <string name="preference_category_message_detail_logs">Enable detail logs</string>
    <string name="preference_category_message_detail_logs_sub">Enable detail logs</string>
    <string name="preference_category_key_detail_logs" translatable="false">detail logs</string>

    <string name="preference_login_limit_key" translatable="false">login_limit</string>
    <string name="preference_login_limit_title">Change login limit</string>
    <string name="preference_login_limit_summary">After %s unsuccessful login attempts the app will be blocked</string>

    <string name="preference_login_limit_default" translatable="false">5</string>

    <string-array name="preference_login_limit_list">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="preference_login_limit_list_values">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="preference_about_version_key" translatable="false">about_version</string>
    <string name="preference_about_version_title">Version</string>
    <string name="preference_about_author" translatable="false">preference_about_author</string>

    <string name="preference_feedback" translatable="false">preference_feedback</string>
    <string name="preference_feedback_title" >Send a feedback</string>
    <string name="preference_feedback_message" >Share your thoughts, issues or ideas for this app</string>

    <string name="email_feedback_title">[NotesApp][Feedback] (Put your title here)]</string>
    <string name="email_feedback_body">[Describe issue]\n[Share your thoughts]\n[Ask questions]</string>

    <string name="preference_idle_lock_timeout_key" translatable="false">idle_lock_time_out</string>
    <string name="preference_idle_lock_timeout_title">Change a timeout</string>
    <string name="preference_idle_lock_timeout_subtitle">Set a new timeout</string>

    <string name="s_3_min">3 minutes</string>
    <string name="s_5_min">5 minutes</string>
    <string name="s_10_min">10 minutes</string>
    <string name="never">Never</string>

    <string-array name="preference_idle_lock_list_values">
        <item>180000</item> <!--IN millis-->
        <item>300000</item> <!--IN millis-->
        <item>600000</item> <!--IN millis-->
    </string-array>

    <string name="preference_idle_lock_time_default" translatable="false">180000</string>

    <string name="preference_extract_key" translatable="false">extract_key</string>
    <string name="preference_extract_title">Extract your notes</string>
    <string name="preference_extract_desc">Extract your notes as plain text.</string>

    <string name="preference_backup_key" translatable="false">backup_key</string>
    <string name="preference_backup_title">Backup your notes</string>
    <string name="preference_backup_desc">Create backup file with your notes.</string>

    <string name="preference_restore_note_key" translatable="false">restore_note_key</string>
    <string name="preference_restore_note_title">Restore your notes</string>
    <string name="preference_restore_note_decs">Select backup file to restore your notes.</string>

    <string name="preference_unlock_note_key" translatable="false">unlock_note_key</string>
    <string name="preference_unlock_note_title">Unlock key</string>

    // Change password dialog
    <string name="hint_new_password">New password</string>
    <string name="hint_old_password">Current password</string>
    <string name="change_password_title_dialog">Change your password</string>

    <string name="change_password_toast_not_correct_password">Entered current password is not correct</string>
    <string name="change_password_toast_password_set">Password is set</string>
    <string name="change_password_toast_password_error">Error. Sorry.</string>

    // Enter keyword dialog
    <string name="set_password_dialog_title">Enter a keyword to encrypt your data</string>
    <string name="set_password_dialog_hint_restore">Enter a keyword.\nPlease, make sure that this is the same keyword as you used to backup this notes. Otherwise this operation will fail.</string>
    <string name="set_password_dialog_hint_backup">Make sure to remember it to be able to restore your data.</string>

    // BlockView
    <string name="block_title">Access is restricted</string>
    <string name="block_message">You need unlock key to restore your application</string>
    <string name="block_hint">Unlock key</string>

    // Biometric prompt
    <string name="biometric_prompt_title">Biometric login</string>
    <string name="biometric_prompt_subtitle">Login using your biometric credential</string>

    // Confirm dialog
    <string name="confirm_dialog_delete_note_title">Delete note</string>
    <string name="confirm_dialog_delete_note_message">Are you sure you want to delete this note ?</string>
    <string name="confirm_dialog_save_note_title">Save note</string>
    <string name="confirm_dialog_save_note_message">Are you sure you want to save this note ?</string>
    <string name="confirm_dialog_clear_note_title">Clear note</string>
    <string name="confirm_dialog_clear_note_message">Are you sure you want to clear entered note ?</string>

    // Errors / Info
    <string name="result_success">Success</string>
    <string name="result_failed">Failed</string>
    <string name="result_canceled">Canceled</string>
    <string name="title_info">Info</string>

    <string name="empty_login">Empty username or password</string>
    <string name="wrong_pass">Sorry, password is wrong. Please, retry.</string>

    <string name="info_author">Author</string>
    <string name="info_author_sub">Serhii Butryk</string>

    <string name="search_title">Search</string>
    <string name="message_email_app_not_found">Sorry, you don\'t have email app. Cannot complete this action.</string>

    <string name="save_note_in_file">Extract note as plain text</string>

    <string name="toast_unlock_key_copied">Unlock key is copied to the clipboard</string>

    <string name="biometric_dialog_title">Biometric authentication</string>
    <string name="biometric_dialog_message">Would you like to retry ? If you disagree you will not be able to use biometrics to login in this app</string>
    <string name="biometric_toast_message">Sorry, failed to login with biometrics</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="forgot_password">Forgot password ?</string>

    <string name="forgot_password_title">Reset password</string>
    <string name="type_password">Type password</string>
    <string name="type_email">Type email</string>

</resources>
