<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/preference_category_title" />

    <Preference
        android:key="@string/preference_change_password_key"
        app:title="@string/preference_change_password_title"
        android:summary="@string/preference_change_password_desc"/>

    <Preference
        android:key="@string/preference_login_limit_key"
        android:title="@string/preference_login_limit_title"/>

    <ListPreference
        android:key="@string/preference_idle_lock_timeout_key"
        android:title="@string/preference_idle_lock_timeout_title"
        android:summary="%s"
        android:entries="@array/preference_idle_lock_list"
        android:entryValues="@array/preference_idle_lock_list_values"
        android:defaultValue="180000"/>

    <PreferenceCategory android:title="@string/preference_category_title_about"/>

    <Preference
        android:key="@string/preference_about_version_key"
        android:title="@string/preference_about_version_title"/>

</PreferenceScreen>