<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/item_type"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_checkbox"
        android:title="@string/action_convert_to_list" />

    <item android:id="@+id/delete_note_item"
        android:title="@string/delete_note_item"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

    <item android:id="@+id/save_note"
        android:title="@string/save_note_item"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/clear_note"
        android:title="@string/clear_note_item"
        app:showAsAction="never"/>

</menu>