<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title_size_text"
        android:textStyle="bold"
        android:text="@string/block_title"
        android:textColor="@color/authorize_title_color_text"
        android:layout_marginBottom="@dimen/margin_top_small"
        android:layout_marginTop="@dimen/margin_top_big"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="@dimen/padding_border_layout"
        android:layout_marginEnd="@dimen/padding_border_layout"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:textSize="@dimen/message_size_text"
        android:text="@string/block_message"
        android:textColor="@color/authorize_title_color_text"
        android:layout_marginBottom="@dimen/padding_border_layout"
        android:layout_marginTop="@dimen/padding_border_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/padding_border_layout"
        android:layout_marginEnd="@dimen/padding_border_layout"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:textColorHint="@color/authorize_title_color_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText android:id="@+id/access_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:hint="@string/block_hint"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/authorize_title_color_text"
            android:focusable="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@null"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/kbtn_ok"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:padding="12dp"/>

</LinearLayout>

</layout>