<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/authorization_activity_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_border_layout"
                    android:layout_marginTop="@dimen/margin_top_large_layout"
                    android:layout_marginEnd="@dimen/padding_border_layout"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:paddingEnd="@dimen/padding_small">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_title_text"
                        android:layout_marginBottom="@dimen/margin_bottom_small"
                        android:gravity="center"
                        android:textColor="@color/authorize_screen_text_color"
                        android:textSize="@dimen/title_size_text"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:textColorHint="@color/authorize_screen_text_color">

                        <EditText
                            android:id="@+id/usr_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:focusable="true"
                            android:hint="@string/usr_new_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/authorize_screen_text_color"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:textColorHint="@color/authorize_screen_text_color"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/usr_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:focusable="true"
                            android:hint="@string/usr_new_psw"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textColor="@color/authorize_screen_text_color"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:textColorHint="@color/authorize_screen_text_color">

                        <EditText
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_background"
                            android:focusable="true"
                            android:hint="@string/usr_approve_new_psw"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:textColor="@color/authorize_screen_text_color"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:text="@string/create_account_bnt"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>