<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <RelativeLayout
            android:id="@+id/authorization_activity_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/padding_border_layout"
                android:layout_marginEnd="@dimen/padding_border_layout"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:paddingTop="@dimen/padding_small"
                android:layout_marginTop="@dimen/margin_top_large_layout"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/title_size_text"
                    android:textColor="@color/authorize_title_color_text"
                    android:layout_marginBottom="@dimen/margin_bottom_small"
                    android:layout_marginTop="@dimen/margin_top_title_text"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="@color/authorize_title_color_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:textSize="18sp"
                        android:hint="@string/usr_email"
                        android:background="@drawable/edit_text_background"
                        android:textColor="@color/authorize_title_color_text"
                        android:focusable="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="@color/authorize_title_color_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:textSize="18sp"
                        android:hint="@string/usr_psw"
                        android:background="@drawable/edit_text_background"
                        android:textColor="@color/authorize_title_color_text"
                        android:focusable="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@null"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/login_btn"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background"
                    android:padding="12dp"/>

                <ImageButton
                    android:id="@+id/btn_fingerprint"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:background="@drawable/fingerprint"
                    android:visibility="gone"/>

                <TextView android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_description"
                    android:gravity="center"
                    android:textSize="@dimen/bottom_text_message_size_text"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_text_massage_label"/>

                <LinearLayout
                    android:id="@+id/google_signin_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/press_state_background">

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>

</layout>